@@ -39,6 +39,8 @@ Unreleased changes (1.0-dev)
     datums. This patch addresses that issue. Now, if Fetcher gets a null content, 
     instead of pushing an empty content, it filters the null content.
     
+13. NUTCH-485 - Change HtmlParseFilter 's to return ParseResult object instead of Parse object. (Gal Nitzan via dogacan)
+
 Release 0.9 - 2007-04-02
 
  1. Changed log4j confiquration to log to stdout on commandline
